{
    "name": "Lab03Binds",
    "maps": [
        {
            "name": "Grid",
            "id": "3fcd3e09-845f-4f2b-9c39-e3ce48cf5252",
            "actions": [
                {
                    "name": "Gridsize",
                    "type": "Value",
                    "id": "9b27d70f-6216-4e5d-a1f5-812472e5b04c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Division Count",
                    "type": "Value",
                    "id": "98a79147-5a62-4506-b6bc-7d13f4587ab9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Place Origin",
                    "type": "Button",
                    "id": "e061772d-df10-41e6-8b1f-fd89f0e4437c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Toggle Origin",
                    "type": "Button",
                    "id": "a286922a-279a-441b-8b70-88f56234fb90",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Toggle Axis",
                    "type": "Button",
                    "id": "5d15b9c9-478c-4416-8c57-44d6962ce4e4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Toggle Dividers",
                    "type": "Button",
                    "id": "5f350251-6fe0-4b2a-95a2-7a9eb04e70f9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Modifier",
                    "type": "Button",
                    "id": "9ba43401-b304-4881-8fd9-eaf835cefefc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Cursor",
                    "type": "Value",
                    "id": "122b3a2d-eb08-4918-a10a-08afbc6c3392",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ChangeDrawingGroup",
                    "type": "Button",
                    "id": "424b45e3-cf6f-4053-b1da-c5a3ce35032b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "LCTRL + Scroll",
                    "id": "fc5973ce-bcd3-44ca-ae3b-235fd452cc3f",
                    "path": "ButtonWithOneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Division Count",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "bab8f0f8-6add-40b2-9abb-79c5a575871c",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Division Count",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "button",
                    "id": "e6fce628-08c9-4e04-8c1d-bffdd7c2163c",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Division Count",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "07bd2e05-31bc-484c-91a4-4206ff35dfa8",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Toggle Origin",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "85c6110e-b719-41b4-bed3-700d2b009561",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Toggle Axis",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9ed9600c-a409-4488-b638-730d1383da56",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Toggle Dividers",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "39f86791-ccce-4958-876e-b254c5d4d5d0",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Place Origin",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b117d8ad-3fa9-4d3c-be73-d19af7333d5f",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Gridsize",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "55277e0c-bcc6-4766-8a50-278c9173555b",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Modifier",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c32271a2-20a6-4b2f-b931-4e06826d04f0",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cursor",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c2f2cca3-d2bb-4f3e-aace-2f1eebf699f5",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeDrawingGroup",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Default",
            "id": "c4c0d5dd-7a77-4620-8f33-3cac373d6e19",
            "actions": [
                {
                    "name": "ToggleShapes",
                    "type": "Button",
                    "id": "f7370537-862a-412a-8f67-39a2ec62e1e4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleParabolas",
                    "type": "Button",
                    "id": "b45c85bd-2250-44b3-9d41-2f9fb257ab64",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e1ebff68-12ef-4651-bad5-cdf855d1f430",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "ToggleShapes",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cf55dcc4-cf8a-4269-8331-0bb838260618",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "ToggleParabolas",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Circle",
            "id": "cac58faf-561e-4b53-a564-fd9c92049207",
            "actions": [
                {
                    "name": "ToggleCricle",
                    "type": "Button",
                    "id": "8547a4cf-44ec-40b1-a2c7-3709036c57e6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveCircle",
                    "type": "Button",
                    "id": "abd5056e-4408-41d3-9b77-722eb66d0a14",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChangeRadius",
                    "type": "Button",
                    "id": "24e7fcde-3f03-4e09-95e2-6b16f24cccf3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ChangeSideCount",
                    "type": "Button",
                    "id": "0eef128b-34ab-4d5a-9399-7cc1c342eaee",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "cb221ceb-98f5-45f7-a2b2-5fd882cbe0a4",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "ToggleCricle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e5ea1493-a5f2-4153-ab55-e471f045bf88",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MoveCircle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "684cd179-4e50-4181-b542-43e1347bd4cb",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeRadius",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "764aba6f-9a51-4956-b7ca-ec7a1900bd34",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "ChangeRadius",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "dd82f728-c878-49da-ae3e-29a5670db439",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "ChangeRadius",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "15bf688d-8c3c-4ee6-a848-f65311a2bedd",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeSideCount",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "56b397b6-809b-42bc-a791-22a96a2acb75",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "ChangeSideCount",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "5dc630cf-bdf0-4b94-a101-fc6eb0dfae72",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "ChangeSideCount",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Ellipse",
            "id": "bc53432b-ad5d-4067-84d7-3bc9b85f276e",
            "actions": [
                {
                    "name": "ToggleEllipse",
                    "type": "Button",
                    "id": "c2625937-e0f1-4590-875f-20d9ab8cb8e5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveEllipse",
                    "type": "Button",
                    "id": "e9118c06-3e2e-45ef-8366-b08041b76829",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChangeHorizontalAxis",
                    "type": "Button",
                    "id": "19476eb1-f8a8-4e16-8f98-2f18d233b2eb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChangeVerticalAxis",
                    "type": "Button",
                    "id": "63473075-14ad-4bd1-9c75-f6206ae1e90f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChangeSideCount",
                    "type": "Button",
                    "id": "f2501961-e930-4eac-accd-d3850a28baf2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a3340b5a-2642-40f1-8096-e4fd0e64cd2f",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "ToggleEllipse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "97d17694-abea-4841-b49b-5ad1341afd23",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MoveEllipse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "0924549e-9811-4847-86c2-27cf9a52a028",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeHorizontalAxis",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "89b50113-6705-4ea2-ac6a-55aeb9cb4467",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "ChangeHorizontalAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "23a2c792-c8f0-4250-9e84-6cf3f350ff14",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "ChangeHorizontalAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "649911ea-437f-4063-9091-6c0cabb406a9",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeVerticalAxis",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "e7a7322f-7ce8-4bf7-9246-e1a92a8b1d20",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "ChangeVerticalAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "0cfafbfb-7706-45ed-9073-6b0be745ce24",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "ChangeVerticalAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "95f48317-5643-4865-b5cd-767c699eb32b",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeSideCount",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "2d12c1b1-1081-4660-a300-cf4db2fb57a8",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "ChangeSideCount",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "a452da5b-40b7-4493-a0e0-b37d5b7c7f8c",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "ChangeSideCount",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}